--- a/html/blog-post.html
+++ b/html/blog-post.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/post.css">
-    <link rel="stylesheet" href="css/post-media.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../css/post.css">
+    <link rel="stylesheet" href="../css/btn.css">
+    <link rel="stylesheet" href="../css/post-media.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <title>Post Infor</title>
@@ -14,11 +15,11 @@
 <body>
     <div class="container">
         <header>
-            <p><a href="index.html" target="blank">Back to Min's blog</a></p>
+            <button><a href="index.html" target="blank">Back to Min's blog</a></button>
             <h1>Blog Post</h1>
             <p>December 23, 2013 by <a href="#me">Min</a></p>
             <div class="about" id="me">
-                <img src="images/min.jpg" alt="Avatar" class="avatar">
+                <img src="../images/min.jpg" alt="Avatar" class="avatar">
                 <div class="author">
                     <div><p>Author Infor1...</p></div>
                     <div><p>Author Infor2...</p></div>
@@ -33,10 +34,10 @@
                 <h3>I'm an aspiring front end developer with tremedous project management experience. <br>Curious? Browse my <a href="#post"><u>post!</u></a><br>Also, feel free to add me on my listed social media profiles!</h3>
             </div>
             <div class="social">
-                <a href="https://github.com/jiangmi7711" target="blank"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/mj7711/" target="blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://www.instagram.com/min_min7711/?hl=en" target="blank"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.facebook.com/min.jiang.3958" target="blank"><i class="bi bi-facebook"></i></a>
+                <a href="https://github.com/jiangmi7711" target="blank">Github</a>
+                <a href="https://www.linkedin.com/in/mj7711/" target="blank">Linkedin</a>
+                <a href="https://www.instagram.com/min_min7711/?hl=en" target="blank">Instagram</a>
+                <a href="https://www.facebook.com/min.jiang.3958" target="blank">Facebook</a>
             </div>   
         </div>
  
@@ -50,7 +51,7 @@
                 For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
             </blockquote>
             <div class="resume">
-                <button><a href="images/Min Jiang_resume _012021.pdf" target="blank"><i class="bi bi-cloud-arrow-down-fill"></i> Download Resume</a></button>
+                <button><a href="../images/Min Jiang_resume _012021.pdf" target="blank"><i class="bi bi-cloud-arrow-down-fill"></i> Download Resume</a></button>
             </div>
         </div>
 
