change html path

--- a/html/blog-post.html
+++ b/html/blog-post.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <button><a href="index.html" target="blank">Back to Min's blog</a></button>
+            <button><a href="../index.html" target="blank">Back to Min's blog</a></button>
             <h1>Blog Post</h1>
             <p>December 23, 2013 by <a href="#me">Min</a></p>
             <div class="about" id="me">
