--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <button type="button"><a href="blog-post.html" target="blank">Go back to Older Posts</a></button>
+            <button type="button"><a href="html/blog-post.html" target="blank">Go back to Older Posts</a></button>
             <h1><b>Min's Blog</b></h1>
             <div class="nav">
                 <a href="#">World</a>
